Address deletion issues after filtering, simplify block names, move logic to validateForm, align error messages

--- a/phone_book_jquery/phoneBook.css
+++ b/phone_book_jquery/phoneBook.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     color: #fff;
     background-color: #343333;
@@ -5,25 +9,19 @@ body {
     font-size: 15px;
 }
 
-* {
-    box-sizing: border-box;
-}
-
 .add-contact-form {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .form-field {
-    width: 160px;
+    width: 300px;
     padding: 4px 3px;
     margin: 8px 5px 10px;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
-}
-
-.phone-number-block {
-    margin-left: -21px;
 }
 
 .header {
@@ -34,6 +32,10 @@ body {
 
 .error {
     border: 2px solid #f00f;
+}
+
+.error-text {
+    color: #f44336;
 }
 
 .phonebook-table-block table {
@@ -100,17 +102,15 @@ body {
 .edit-contact, .save-contact {
     background-color: #4caf50;
     color: #fff;
+    margin-left: 5px;
 }
 
-.reset-filter-button, .delete-contact, .cancel-edit, .delete-selected-contacts-button {
-    background-color: #f44336;
-    color: #fff;
-    border: none;
+.reset-filter-button {
     margin-left: 5px;
 }
 
 .phone-number-column {
-    width: 210px;
+    width: 195px;
 }
 
 .actions-column {
@@ -143,8 +143,15 @@ body {
     white-space: normal;
 }
 
-.validation-message {
-    color: #f44336;
+.validation-message-form {
+    margin-right: 150px;
+    display: flex;
+    justify-content: right;
+}
+
+.validation-message-form-phone {
+    display: flex;
+    justify-content: right;
 }
 
 .delete-selected-contacts-button {
@@ -154,4 +161,20 @@ body {
 .delete-selected-contacts-block {
     text-align: center;
     margin-bottom: 10px;
+}
+
+.danger-button {
+    background-color: #f44336;
+    color: #fff;
+    border: none;
+}
+
+.inputs-block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.filter-input {
+    width: 300px;
 }
